Updated Our Team
Uploaded images

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -12,7 +12,7 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/carousel/">
 
     <!-- Bootstrap core CSS -->
-    <link href="assets/dist/css/bootstrap.css" rel="stylesheet">
+    <link href="../assets/dist/css/bootstrap.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Alegreya' rel='stylesheet'>
 
@@ -198,20 +198,18 @@
                 them into musicians.
                 He passed away in 1847 leaving behind a wealth of compositions that his students had learnt.
                 Among his disciples, one such composer was Sri Akumalla Manambuchavadi Venkatasubbayya.
-                He was the guru to the great composer Sri Patnam Subramanya Iyer. H
-                e lived between 1803- 1862 and among his students, one was Sri Susarla Dakshinamurthy Sastry
+                He was the guru to the great composer Sri Patnam Subramanya Iyer. He lived between 1803- 1862 and among his students, one was Sri Susarla Dakshinamurthy Sastry
                 (1860-1917). <br /><br/>
                 Sri Susarla Dakshinamurthy had travelled all the way to Tamilnadu by foot from Andhra Pradesh just to
                 learn music from his guru.
                 After he learnt under him, he returned to Andhra pradesh to spread his knowledge in music.
-                He was the first person to have bought the tradition of Saint Thyagaraja to Andhra Pradesh. I
-                t was from him that Sri Parupalli Ramakrishnayya panthulu (1883-1951) had learnt music.
+                He was the first person to have bought the tradition of Saint Thyagaraja to Andhra Pradesh. It was from him that Sri Parupalli Ramakrishnayya panthulu (1883-1951) had learnt music.
                 After that, the great Dr. Mangalampally Balamuralikrishna had trained under him since he was a child.
                 Not only was Sri Ramakrishnayya Pantulu adept in vocal music, but he also taught his students music on
                 the violin simultaneously.
                 It is here from where Dr. Balamuralikrishna learnt the violin, along with his classmates Sri
                 Annavarapuu Ramaswamy and Sri Neti Srirama Sarma. <br /><br />
-                Our principal, Sr. Padma Govardhan had the chance to learn from all three of these gurus.
+                Our principal, Dr. Padma Govardhan had the chance to learn from all three of these gurus.
                 This rich style of music formed the roots of her learning, along with experience learning under Sri
                 Gadde Ramakumari, who was also a disciple of Sri Annavarapu Ramaswamy.
                 Today, she continues to impart this knowledge to her students and turn them into musicians that can
