Updated assets path

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -12,7 +12,7 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/carousel/">
 
     <!-- Bootstrap core CSS -->
-    <link href="/assets/dist/css/bootstrap.css" rel="stylesheet">
+    <link href="assets/dist/css/bootstrap.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Alegreya' rel='stylesheet'>
 
@@ -109,7 +109,7 @@
         </div>
     </nav>
 
-    <div style="background-image: linear-gradient(to right,#5F2D58,#F02D75);height: 300px;padding: 100px 0;">
+    <div style="background-image: linear-gradient(to right,#5F2D58,#F02D75);height: 300px;padding: 100px 0;text-align: center;">
         <br />
         <p style="font-family:'Alegreya';color:#FFFFFF;padding-left: 50px;font-size:30px;">Our Journey ...</p>
     </div>
