Updated Our team,About us and contact us

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -58,7 +58,7 @@
         div.transbox {
             height: 100%;
             width: 100%;
-            background-image: linear-gradient(to right, #295EC7, #5F2D58);
+            background-image: linear-gradient(to right, #5F2D58, #F02D75);
             border: 1px solid black;
             opacity: 0.6;
         }
@@ -67,13 +67,6 @@
             margin: 5%;
             font-weight: bold;
             color: #FFFFFF;
-        }
-
-        div.transbox1 {
-            height: 50%;
-            width: 50%;
-            background-color: #FFFFFF;
-            border: 1px solid black;
         }
     </style>
     <!-- Custom styles for this template -->
@@ -102,16 +95,17 @@
                     <a class="nav-link " href="OurTeam.html" style="color:#FFFFFF;">OUR TEAM</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="#" style="color:#FFFFFF;">GET IN TOUCH</a>
+                    <a class="nav-link " href="ContactUs.html" style="color:#FFFFFF;">GET IN TOUCH</a>
                 </li>
             </ul>
 
         </div>
     </nav>
 
-    <div style="background-image: linear-gradient(to right,#5F2D58,#F02D75);height: 300px;padding: 100px 0;text-align: center;">
-        <br />
-        <p style="font-family:'Alegreya';color:#FFFFFF;padding-left: 50px;font-size:30px;">Our Journey ...</p>
+    <div style="background-image: url('images/everyone.png');height: 300px;text-align: center;background-size: 100% 100%;">
+        <div class="transbox" style="display: block;position: relative;text-align: center;height: 300px;">
+            <p style="font-family:'Alegreya';color:#FFFFFF;padding-left: 50px;font-size:40px;">Our Journey ...</p>
+        </div>
     </div>
 
     <div class="row featurette">
@@ -166,14 +160,14 @@
         </div>
     </div>
 
-    <div style="background-image: url(images/gurusBackground.png);height: 300px;background-size: 100% 100%;">
+    <div style="background-image: url(images/ourguruscover.png);height: 300px;background-size: 100% 100%;">
         <div class="transbox" style="text-align:center;font-size:30px;padding-top: 60px;display: block;position: relative;">
-            <p style="font-family:'Alegreya';color: #FFFFFF;">Our Gurus ...</p>
-            <table style="width:100%;table-layout: fixed;font-family:'Alegreya';font-size:16px;color: #000000">
-                <tr>
+            <p style="font-family:'Alegreya';color: #FFFFFF;padding-top: 30px;">Our Gurus ...</p>
+            <table style="width:100%;table-layout: fixed;font-family:'Alegreya';font-size:16px;color: #000000;">
+                <tr style="padding-bottom: 50px;">
                     <td>&nbsp;</td>
                     <td>&nbsp;</td>
-                    <td style="border-radius:20px;background-color: seashell;text-align: center;">
+                    <td style="border-radius:20px;background-color: #FFFFFF;text-align: center;box-shadow: 2px 3px;">
                         "Guruvula guruvula guruvula guruve <br />Varamaina Thyagaraju maaku <br />Guruvula guruvula
                         guruve Venkata Vara
                         subbayya maaku<br /> Parama guruvu Dakshinamurthy <br />Maa guruve Ramakrishna Murali ravali
@@ -184,59 +178,73 @@
                     <td>&nbsp;</td>
                     <td>&nbsp;</td>
                 </tr>
-                <tr>
+                <tr style="padding-bottom: 50px;">
                     <td colspan="3"></td>
                 </tr>
             </table>
         </div>
     </div>
     <div>
+        &nbsp;
         <div class="row featurette" style="display:block;position:relative;padding: 200px;">
             <div class="col-md-12">
                 <p style="font-family:'Lato';text-align: justify;font-size: 16px;">
-                The great saint Thyagaraja trained several disciples during his time in the Tanjaore district and made
-                them into musicians.
-                He passed away in 1847 leaving behind a wealth of compositions that his students had learnt.
-                Among his disciples, one such composer was Sri Akumalla Manambuchavadi Venkatasubbayya.
-                He was the guru to the great composer Sri Patnam Subramanya Iyer. He lived between 1803- 1862 and among his students, one was Sri Susarla Dakshinamurthy Sastry
-                (1860-1917). <br /><br/>
-                Sri Susarla Dakshinamurthy had travelled all the way to Tamilnadu by foot from Andhra Pradesh just to
-                learn music from his guru.
-                After he learnt under him, he returned to Andhra pradesh to spread his knowledge in music.
-                He was the first person to have bought the tradition of Saint Thyagaraja to Andhra Pradesh. It was from him that Sri Parupalli Ramakrishnayya panthulu (1883-1951) had learnt music.
-                After that, the great Dr. Mangalampally Balamuralikrishna had trained under him since he was a child.
-                Not only was Sri Ramakrishnayya Pantulu adept in vocal music, but he also taught his students music on
-                the violin simultaneously.
-                It is here from where Dr. Balamuralikrishna learnt the violin, along with his classmates Sri
-                Annavarapuu Ramaswamy and Sri Neti Srirama Sarma. <br /><br />
-                Our principal, Dr. Padma Govardhan had the chance to learn from all three of these gurus.
-                This rich style of music formed the roots of her learning, along with experience learning under Sri
-                Gadde Ramakumari, who was also a disciple of Sri Annavarapu Ramaswamy.
-                Today, she continues to impart this knowledge to her students and turn them into musicians that can
-                continue this heritage.
-                <br /><br />Dr Padma evinced interest in Carnatic music even during her formative years but it was when she
-                was 12 years old that she began
-                learning the art in her native Vijayawada, from Annavarapu Ramaswamy and Ramakumari. Years later,
-                moving to Chennai, she completed
-                the ‘Sangeetha Ratna’ course from the Music Academy, under the guidance of Sangeetha Kalanidhi B Rajam
-                Iyer and S R Janakiraman.
-                It was during this time that she also trained undr Dr. M. Balamuralikrishna. Relocating to Hyderabad,
-                she learnt Carnatic Music
-                from Sri Neti Rama Sharma and she and completed her post-graduation in Music from University of Madras
-                throuch distance education,
-                all while teaching and attending to her family. She is also a graduate in Science with Botany as a
-                major subject and a
-                postgraduate in Public Administration. But this deeply-rooted thirst for music did not end there.
-                <br /><br />Dr. Padma received her Doctorate in Carnatic music from Mother Theresa University, Kodaikanal in
-                2016 on her topic of research,
-                "An in-depth analysis of Shankarabharam and its Janya Ragas" under the guidance of Dr. Radha
-                Venkatachalam,
-                retired professor of Delhi University.<br /> <br />Even as she pursued her own educational pathway as a
-                doctorate student,
-                Dr Padma has been imparting her knowledge to hundreds of students, with fifteen of them completing
-                their graduation in Carnatic Music examinations conducted by the London based Academy of Fine Arts and
-                the New Zealand Carnatic Music Society (Auckland), recognised by the University of Madras.
-            </p>
+                    The great saint Thyagaraja trained several disciples during his time in the Tanjaore district and
+                    made
+                    them into musicians.
+                    He passed away in 1847 leaving behind a wealth of compositions that his students had learnt.
+                    Among his disciples, one such composer was Sri Akumalla Manambuchavadi Venkatasubbayya.
+                    He was the guru to the great composer Sri Patnam Subramanya Iyer. He lived between 1803- 1862 and
+                    among his students, one was Sri Susarla Dakshinamurthy Sastry
+                    (1860-1917). <br /><br />
+                    Sri Susarla Dakshinamurthy had travelled all the way to Tamilnadu by foot from Andhra Pradesh just
+                    to
+                    learn music from his guru.
+                    After he learnt under him, he returned to Andhra pradesh to spread his knowledge in music.
+                    He was the first person to have bought the tradition of Saint Thyagaraja to Andhra Pradesh. It was
+                    from him that Sri Parupalli Ramakrishnayya panthulu (1883-1951) had learnt music.
+                    After that, the great Dr. Mangalampally Balamuralikrishna had trained under him since he was a
+                    child.
+                    Not only was Sri Ramakrishnayya Pantulu adept in vocal music, but he also taught his students music
+                    on
+                    the violin simultaneously.
+                    It is here from where Dr. Balamuralikrishna learnt the violin, along with his classmates Sri
+                    Annavarapuu Ramaswamy and Sri Neti Srirama Sarma. <br /><br />
+                    Our principal, Dr. Padma Govardhan had the chance to learn from all three of these gurus.
+                    This rich style of music formed the roots of her learning, along with experience learning under Sri
+                    Gadde Ramakumari, who was also a disciple of Sri Annavarapu Ramaswamy.
+                    Today, she continues to impart this knowledge to her students and turn them into musicians that can
+                    continue this heritage.
+                    <br /><br />Dr Padma evinced interest in Carnatic music even during her formative years but it was
+                    when she
+                    was 12 years old that she began
+                    learning the art in her native Vijayawada, from Annavarapu Ramaswamy and Ramakumari. Years later,
+                    moving to Chennai, she completed
+                    the ‘Sangeetha Ratna’ course from the Music Academy, under the guidance of Sangeetha Kalanidhi
+                    B Rajam
+                    Iyer and S R Janakiraman.
+                    It was during this time that she also trained undr Dr. M. Balamuralikrishna. Relocating to
+                    Hyderabad,
+                    she learnt Carnatic Music
+                    from Sri Neti Rama Sharma and she and completed her post-graduation in Music from University of
+                    Madras
+                    throuch distance education,
+                    all while teaching and attending to her family. She is also a graduate in Science with Botany as a
+                    major subject and a
+                    postgraduate in Public Administration. But this deeply-rooted thirst for music did not end there.
+                    <br /><br />Dr. Padma received her Doctorate in Carnatic music from Mother Theresa University,
+                    Kodaikanal in
+                    2016 on her topic of research,
+                    "An in-depth analysis of Shankarabharam and its Janya Ragas" under the guidance of Dr. Radha
+                    Venkatachalam,
+                    retired professor of Delhi University.<br /> <br />Even as she pursued her own educational pathway
+                    as a
+                    doctorate student,
+                    Dr Padma has been imparting her knowledge to hundreds of students, with fifteen of them completing
+                    their graduation in Carnatic Music examinations conducted by the London based Academy of Fine Arts
+                    and
+                    the New Zealand Carnatic Music Society (Auckland), recognised by the University of Madras.
+                </p>
             </div>
         </div>
     </div>
