--- a/ContactUs.html
+++ b/ContactUs.html
@@ -54,10 +54,11 @@
             left: 50%;
             transform: translate(-50%, -50%);
         }
+
         div.transbox {
             height: 100%;
             width: 100%;
-            background-image: linear-gradient(to right, #F88C, #EF4442);
+            background-image: linear-gradient(to right, #295EC7, #000000);
             border: 1px solid black;
             opacity: 0.6;
         }
@@ -72,16 +73,16 @@
     <link href="carousel.css" rel="stylesheet">
 </head>
 
-<body >
+<body style="font-family:'Lato';">
 
     <nav class="navbar navbar-expand-sm navbar-dark fixed-top " style="background-color:#707070;opacity: 0.5;">
         <a class="navbar-brand" href="#">
             <img src="images/sbIcon.png" alt="Logo" style="width:50px; height:50px;">
         </a>
 
-        <div class="collapse navbar-collapse" id="navbarCollapse" style="font-family:'Lato';">
+        <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active" >
+                <li class="nav-item active">
                     <a class="nav-link" href="index.html"><b>SANGEETHA BHARATHI NZ </b></a>
                     &nbsp;&nbsp; <small style="color:#FFFFFF;"><i>A School of Carnatic Music</i></small>
                 </li>
@@ -94,75 +95,82 @@
                     <a class="nav-link " href="OurTeam.html" style="color:#FFFFFF;">OUR TEAM</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="#" style="color:#FFFFFF;">GET IN TOUCH</a>
+                    <a class="nav-link " href="ContactUs.html" style="color:#FFFFFF;">GET IN TOUCH</a>
                 </li>
             </ul>
 
         </div>
     </nav>
 
-    <div style="background-image: url('images/saraswathicover.png');height: 400px;background-size: 100% 100%;">
-        <div class="transbox" style="display: block;position: relative;text-align: center">
-        <p style="font-family:'Alegreya';color:#FFFFFF;padding-top: 50px;text-align: center;font-size: 40px;font-weight: bolder;">Our Team ...</p>
-        <p style="font-family:'Alegreya';text-align:center;color: #FFFFFF;font-size: 24px">
-            We have a team of professional teachers and oraganisers who work really hard to keep music alive and keep
-            close to our roots
-        </p>
+    <div style="background-image: url('images/studentscontactus.png');height: 300px;text-align: center;background-size: 100% 100%;">
+        <div class="transbox" style="display: block;position: relative;text-align: center;height: 300px;">
+            <p style="font-family:'Alegreya';color:#FFFFFF;padding-left: 50px;font-size:40px;">Get in Touch ...</p>
         </div>
     </div>
 
-    <div style="font-family:'Lato';text-align: center;display: inline-block;width:100%;">
+    <div class="container" style="background-color:#707070;text-align: center;color: #FFFFFF;">
         <div class="row">
             <div class="col">
-                <img src="images/DrPadma.png" class="card-img-top" style="height: 400px;width:300px;">
-            </div>
-            <div class="col">
-
-                <img src="images/HOD.png" class="card-img-top" style="height: 400px;width:300px;">
-
+                <h4>Contact Information</h4>
+                &nbsp;
+                &nbsp;
+                &nbsp;
 
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <img src="images/Group 7.svg" class="card-img-top" style="height: 400px;width:300px;">
+                <img src='images/locationIco.png'>
             </div>
             <div class="col">
-
-                <img src="images/Group 8.svg" class="card-img-top" style="height: 400px;width:300px;">
+                <p>
+                    48B Arundel St <br />Hillsbourough, Auckland <br />New Zealand - 1004
+                </p>
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <img src="images/IndiaChap.png" class="card-img-top" style="height: 400px;width:300px;">
+                <img src='images/phoneIco.png'>
             </div>
             <div class="col">
-                <img src="images/SwedenChap.png" class="card-img-top" style="height: 400px;width:300px;">
+                <p>
+                    (+61) 451 085 060
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <img src='images/emailIco.png'>
             </div>
             <div class="col">
-                <img src="images/SydneyChap.png" class="card-img-top" style="height: 400px;width:300px;">
+                <p>
+                    sbharathonz@yahoo.com
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <img src='images/fbIco.png'>
+            </div>
+            <div class="col" >
+                <p>
+                    <a href='https://www.facebook.com/Sangeetha-Bharathi-784529795272066' style="color:#FFFFFF;">Facebook Page</a><br/>
+                    <a href='https://www.facebook.com/sangeetha.bharathi' style="color:#FFFFFF;">Sangeetha Bharathi on FB</a>
+                </p>
             </div>
         </div>
         <div class="row">
                 <div class="col">
-                    <img src="images/Group 9.svg" class="card-img-top" style="height: 400px;width:300px;">
+                    <img src='images/youtubeIco.png'>
                 </div>
-                <div class="col">
-                    <img src="images/Group 10.svg" class="card-img-top" style="height: 400px;width:300px;">
-                </div>
-                <div class="col">
-                    <img src="images/Group 11.svg" class="card-img-top" style="height: 400px;width:300px;">
+                <div class="col" >
+                    <p>
+                        <a href='https://www.youtube.com/channel/UCOjK0HKzkvhVCxzAz1UncaQ' style="color:#FFFFFF;">Youtube Channel</a><br/>
+                        
+                    </p>
                 </div>
             </div>
     </div>
-
-    <!-- FOOTER -->
-    <footer class="container">
-        <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017-2020 Sangeetha Bharathi Music School &middot; </p>
-    </footer>
-    </main>
-
 
 </body>
 
