Fixed for mobile view

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -128,11 +128,11 @@
                 students that music is a divine art that has to be learnt with bhakthi and dedication.
                 <br />
                 <br />
-                We started off a school back in 2004 with 30 students in a small house. Our motto is to provide
+                We started off as a school back in 2004 with 30 students in a small house. Our motto is to provide
                 students their own opportunities and not having to ask other people for chances to sing. We also wanted
                 to provide a concert platform for students of Sangeetha Bharathi to gain experience in singing infront
-                of a crowd in order to naturally increase their inner sponteinity. Today, with over 15 with a Diploma
-                in music, Sangeetha Bharathi continues to train with the same integrity and commitment to produce
+                of a crowd in order to naturally increase their inner sponteinity. Today, with over 15 students with a "Diploma
+                in music", Sangeetha Bharathi continues to train with the same integrity and commitment to produce
                 quality music.</p>
         </div>
         <div class="col-md-5 order-md-1">
@@ -166,98 +166,98 @@
             </svg>
         </div>
     </div>
-
-    <div style="background-image: url(images/ourguruscover.png);height: 300px;background-size: 100% 100%;">
-        <div class="transbox" style="text-align:center;font-size:30px;padding-top: 60px;display: block;position: relative;">
-            <p style="font-family:'Alegreya';color: #FFFFFF;padding-top: 30px;">Our Gurus ...</p>
-            <table style="width:100%;table-layout: fixed;font-family:'Alegreya';font-size:16px;color: #000000;">
-                <tr style="padding-bottom: 50px;">
-                    <td>&nbsp;</td>
-                    <td>&nbsp;</td>
-                    <td style="border-radius:20px;background-color: #FFFFFF;text-align: center;box-shadow: 2px 3px;">
-                        "Guruvula guruvula guruvula guruve <br />Varamaina Thyagaraju maaku <br />Guruvula guruvula
-                        guruve Venkata Vara
-                        subbayya maaku<br /> Parama guruvu Dakshinamurthy <br />Maa guruve Ramakrishna Murali ravali
-                        roopamane Sat<br />
-                        Bhavame mahabhagyamu raa" <br />
-                        <i>- Dr.Mangalampally Balamuralikrishna</i>
-                    </td>
-                    <td>&nbsp;</td>
-                    <td>&nbsp;</td>
-                </tr>
-                <tr style="padding-bottom: 50px;">
-                    <td colspan="3"></td>
-                </tr>
-            </table>
-        </div>
-    </div>
     <div class="container-fluid">
-        &nbsp;
-        <div class="row featurette" style="padding: 200px;">
-            <div class="col-md-12">
-                <p style="font-family:'Lato';text-align: justify;font-size: 16px;">
-                    The great saint Thyagaraja trained several disciples during his time in the Tanjaore district and
-                    made
-                    them into musicians.
-                    He passed away in 1847 leaving behind a wealth of compositions that his students had learnt.
-                    Among his disciples, one such composer was Sri Akumalla Manambuchavadi Venkatasubbayya.
-                    He was the guru to the great composer Sri Patnam Subramanya Iyer. He lived between 1803- 1862 and
-                    among his students, one was Sri Susarla Dakshinamurthy Sastry
-                    (1860-1917). <br /><br />
-                    Sri Susarla Dakshinamurthy had travelled all the way to Tamilnadu by foot from Andhra Pradesh just
-                    to
-                    learn music from his guru.
-                    After he learnt under him, he returned to Andhra pradesh to spread his knowledge in music.
-                    He was the first person to have bought the tradition of Saint Thyagaraja to Andhra Pradesh. It was
-                    from him that Sri Parupalli Ramakrishnayya panthulu (1883-1951) had learnt music.
-                    After that, the great Dr. Mangalampally Balamuralikrishna had trained under him since he was a
-                    child.
-                    Not only was Sri Ramakrishnayya Pantulu adept in vocal music, but he also taught his students music
-                    on
-                    the violin simultaneously.
-                    It is here from where Dr. Balamuralikrishna learnt the violin, along with his classmates Sri
-                    Annavarapuu Ramaswamy and Sri Neti Srirama Sarma. <br /><br />
-                    Our principal, Dr. Padma Govardhan had the chance to learn from all three of these gurus.
-                    This rich style of music formed the roots of her learning, along with experience learning under Sri
-                    Gadde Ramakumari, who was also a disciple of Sri Annavarapu Ramaswamy.
-                    Today, she continues to impart this knowledge to her students and turn them into musicians that can
-                    continue this heritage.
-                    <br /><br />Dr Padma evinced interest in Carnatic music even during her formative years but it was
-                    when she
-                    was 12 years old that she began
-                    learning the art in her native Vijayawada, from Annavarapu Ramaswamy and Ramakumari. Years later,
-                    moving to Chennai, she completed
-                    the ‘Sangeetha Ratna’ course from the Music Academy, under the guidance of Sangeetha Kalanidhi
-                    B Rajam
-                    Iyer and S R Janakiraman.
-                    It was during this time that she also trained undr Dr. M. Balamuralikrishna. Relocating to
-                    Hyderabad,
-                    she learnt Carnatic Music
-                    from Sri Neti Rama Sharma and she and completed her post-graduation in Music from University of
-                    Madras
-                    throuch distance education,
-                    all while teaching and attending to her family. She is also a graduate in Science with Botany as a
-                    major subject and a
-                    postgraduate in Public Administration. But this deeply-rooted thirst for music did not end there.
-                    <br /><br />Dr. Padma received her Doctorate in Carnatic music from Mother Theresa University,
-                    Kodaikanal in
-                    2016 on her topic of research,
-                    "An in-depth analysis of Shankarabharam and its Janya Ragas" under the guidance of Dr. Radha
-                    Venkatachalam,
-                    retired professor of Delhi University.<br /> <br />Even as she pursued her own educational pathway
-                    as a
-                    doctorate student,
-                    Dr Padma has been imparting her knowledge to hundreds of students, with fifteen of them completing
-                    their graduation in Carnatic Music examinations conducted by the London based Academy of Fine Arts
-                    and
-                    the New Zealand Carnatic Music Society (Auckland), recognised by the University of Madras.
-                </p>
+        <div style="background-image: url(images/ourguruscover.png);height: 300px;background-size: 100% 100%;">
+            <div class="transbox" style="text-align:center;font-size:30px;padding-top: 60px;display: block;position: relative;">
+                <p style="font-family:'Alegreya';color: #FFFFFF;padding-top: 30px;">Our Gurus ...</p>
             </div>
         </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4"></div>
+                <div class="col-sm-4" style="font-family:'Alegreya';font-size:15px;text-align: center;">
+                    <p style="border-radius:20px;background-color: #FFFFFF;text-align: center;box-shadow: 2px 3px;">
+                        "Guruvula guruvula guruvula guruve
+                        <br />Varamaina Thyagaraju maaku
+                        <br />Guruvula guruvula guruve Venkata
+                        <br />Vara subbayya maaku
+                        <br />Parama guruvu Dakshinamurthy
+                        <br />Maa guruve Ramakrishna 
+                        <br />Murali ravali roopamane Sat 
+                        <br />Bhavame mahabhagyamu raa"
+                    </p>
+                    <i>- Dr.Mangalampally Balamuralikrishna</i>
+
+                </div>
+                <div class="col-sm-4"></div>
+            </div>
+        </div>
+
+        &nbsp;
+
+        <p style="font-family:'Lato';text-align: justify;font-size: 16px;">
+            The great saint Thyagaraja trained several disciples during his time in the Tanjaore district and
+            made
+            them into musicians.
+            He passed away in 1847 leaving behind a wealth of compositions that his students had learnt.
+            Among his disciples, one such composer was Sri Akumalla Manambuchavadi Venkatasubbayya.
+            He was the guru to the great composer Sri Patnam Subramanya Iyer. He lived between 1803- 1862 and
+            among his students, one was Sri Susarla Dakshinamurthy Sastry
+            (1860-1917). <br /><br />
+            Sri Susarla Dakshinamurthy had travelled all the way to Tamilnadu by foot from Andhra Pradesh just
+            to
+            learn music from his guru.
+            After he learnt under him, he returned to Andhra pradesh to spread his knowledge in music.
+            He was the first person to have bought the tradition of Saint Thyagaraja to Andhra Pradesh. It was
+            from him that Sri Parupalli Ramakrishnayya panthulu (1883-1951) had learnt music.
+            After that, the great Dr. Mangalampally Balamuralikrishna had trained under him since he was a
+            child.
+            Not only was Sri Ramakrishnayya Pantulu adept in vocal music, but he also taught his students music
+            on
+            the violin simultaneously.
+            It is here from where Dr. Balamuralikrishna learnt the violin, along with his classmates Sri
+            Annavarapuu Ramaswamy and Sri Neti Srirama Sarma. <br /><br />
+            Our principal, Dr. Padma Govardhan had the chance to learn from all three of these gurus.
+            This rich style of music formed the roots of her learning, along with experience learning under Sri
+            Gadde Ramakumari, who was also a disciple of Sri Annavarapu Ramaswamy.
+            Today, she continues to impart this knowledge to her students and turn them into musicians that can
+            continue this heritage.
+            <br /><br />Dr Padma evinced interest in Carnatic music even during her formative years but it was
+            when she
+            was 12 years old that she began
+            learning the art in her native Vijayawada, from Annavarapu Ramaswamy and Ramakumari. Years later,
+            moving to Chennai, she completed
+            the ‘Sangeetha Ratna’ course from the Music Academy, under the guidance of Sangeetha Kalanidhi
+            B Rajam
+            Iyer and S R Janakiraman.
+            It was during this time that she also trained undr Dr. M. Balamuralikrishna. Relocating to
+            Hyderabad,
+            she learnt Carnatic Music
+            from Sri Neti Rama Sharma and she and completed her post-graduation in Music from University of
+            Madras
+            throuch distance education,
+            all while teaching and attending to her family. She is also a graduate in Science with Botany as a
+            major subject and a
+            postgraduate in Public Administration. But this deeply-rooted thirst for music did not end there.
+            <br /><br />Dr. Padma received her Doctorate in Carnatic music from Mother Theresa University,
+            Kodaikanal in
+            2016 on her topic of research,
+            "An in-depth analysis of Shankarabharam and its Janya Ragas" under the guidance of Dr. Radha
+            Venkatachalam,
+            retired professor of Delhi University.<br /> <br />Even as she pursued her own educational pathway
+            as a
+            doctorate student,
+            Dr Padma has been imparting her knowledge to hundreds of students, with fifteen of them completing
+            their graduation in Carnatic Music examinations conducted by the London based Academy of Fine Arts
+            and
+            the New Zealand Carnatic Music Society (Auckland), recognised by the University of Madras.
+        </p>
+
+    </div>
     </div>
 
     <!-- FOOTER -->
-    <footer class="container">
+    <footer class="container-fluid">
         <p class="float-right"><a href="#">Back to top</a></p>
         <p>&copy; 2004-2020 Sangeetha Bharathi Music School, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
     </footer>
