--- a/OurTeam.html
+++ b/OurTeam.html
@@ -121,50 +121,50 @@
     <div style="font-family:'Lato';text-align: center;display: inline-block;width:100%;">
         <div class="row">
             <div class="col">
-                <img src="images/DrPadma.png" class="card-img-top" style="height: 400px;width:300px;">
+                <img src="images/DrPadma.png" class="card-img-top" style="height: 400px;width: 300px;">
             </div>
             <div class="col">
 
-                <img src="images/HOD.png" class="card-img-top" style="height: 400px;width:300px;">
+                <img src="images/HOD.png" class="card-img-top" style="height: 400px;width: 300px;">
 
 
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <img src="images/Group 7.svg" class="card-img-top" style="height: 400px;width:300px;">
+                <img src="images/Group 7.svg" class="card-img-top" style="display:inline;margin:30px;padding-right: 50px;padding-left: 20px;">
             </div>
             <div class="col">
 
-                <img src="images/Group 8.svg" class="card-img-top" style="height: 400px;width:300px;">
+                <img src="images/Group 8.svg" class="card-img-top" style="display:inline;margin:30px;padding-left: 50px;">
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <img src="images/IndiaChap.png" class="card-img-top" style="height: 400px;width:300px;">
+                <img src="images/IndiaChap.png" class="card-img-top" style="height:400px;width:200px;">
             </div>
             <div class="col">
-                <img src="images/SwedenChap.png" class="card-img-top" style="height: 400px;width:300px;">
+                <img src="images/SwedenChap.png" class="card-img-top" style="height:400px;width:200px;">
             </div>
             <div class="col">
-                <img src="images/SydneyChap.png" class="card-img-top" style="height: 400px;width:300px;">
+                <img src="images/SydneyChap.png" class="card-img-top" style="height:400px;width:200px;">
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <img src="images/Group 9.svg" class="card-img-top" style="height: 400px;width:300px;">
+                <img src="images/Group 9.svg" class="card-img-top" style="height:300px;width:25opx;">
             </div>
             <div class="col">
-                <img src="images/Group 10.svg" class="card-img-top" style="height: 400px;width:300px;">
+                <img src="images/Group 10.svg" class="card-img-top" style="height:300px;width:25opx;">
             </div>
             <div class="col">
-                <img src="images/Group 11.svg" class="card-img-top" style="height: 400px;width:300px;">
+                <img src="images/Group 11.svg" class="card-img-top" style="height:300px;width:25opx;">
             </div>
         </div>
     </div>
 
     <!-- FOOTER -->
-    <footer class="container">
+    <footer class="container-fluid">
             <p class="float-right"><a href="#">Back to top</a></p>
             <p>&copy; 2004-2020 Sangeetha Bharathi Music School, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
           </footer>
