--- a/index.html
+++ b/index.html
@@ -59,6 +59,17 @@
         left: 50%;
         transform: translate(-50%, -50%);
       }
+
+      div.transbox {
+            background-image: linear-gradient(#010101 ,rgb(68, 32, 63));
+            opacity: 0.6;
+        }
+
+      div.transbox p {
+            margin: 5%;
+            font-weight: bold;
+            color: #FFFFFF;
+        }
   </style>
   <!-- Custom styles for this template -->
   <link href="carousel.css" rel="stylesheet">
@@ -86,7 +97,8 @@
         </ul>
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="https://us02web.zoom.us/rec/share/4td3FpvP-VFJXrPj82zgXY8BG4H4eaa80CAc_Ppfy0tG0GlTjijeP06UVXIAb925" target="_blank" style="color:#FFFFFF;">Annamayya Sangeetha Janaranjani
+            <a class="nav-link" href="https://us02web.zoom.us/rec/share/4td3FpvP-VFJXrPj82zgXY8BG4H4eaa80CAc_Ppfy0tG0GlTjijeP06UVXIAb925"
+              target="_blank" style="color:#FFFFFF;">Annamayya Sangeetha Janaranjani
               Live Link</a>
           </li>
           <li class="nav-item">
@@ -112,36 +124,40 @@
           <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
               <div>
-                <a target="_blank" href="https://us02web.zoom.us/rec/share/4td3FpvP-VFJXrPj82zgXY8BG4H4eaa80CAc_Ppfy0tG0GlTjijeP06UVXIAb925">
-                  <img src="images/AnnammayyaEvent.jpg">
-                </a>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div>
+
                 <a href="AboutUs.html">
-                  <img src="images/Gurus.jpg" style="opacity: 0.9;">
+                  <img src="images/Gurus.jpg">
 
                   <div class="centered">
-                    <br />
-                    <br />
+                      <div class="transbox" style="display: block;position: relative;height: 900px;width:1250px;">
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
                     &nbsp;
-                    <p style="font-family:'Alegreya';font-size:24pt;color:#FFFFFF;text-shadow: 3px 3px #010101" align="center">
-                      <b>Carrying forward a legacy...
-                    </p>
-                    <br />
-                    <p style="font-family:'Lato';color:#EF4442;font-size:16pt; text-shadow: 1px 1px #FFFFFF">
-                      <i>We at Sangeetha Bharathi belong to Thyagaraja's shishya parampara and continue to uphold this
-                        tradition of Music for Bhakthi and Salvation and teach our students that Music is divine and
-                        has
-                        to be learnt with Bhakthi and dedication.</i>
-                      </b>
-                    </p>
+                    &nbsp;
+                      <p style="font-family:'Alegreya';font-size:3vw;color:#FFFFFF; text-align: center;">
+                        <b>Carrying forward a legacy...
+                      </p>
+                      <p style="font-family:'Alegreya';color:#FFFFFF;font-size:2vw;text-align: center;">
+                        <i>We at Sangeetha Bharathi belong to Thyagaraja's shishya parampara and <br/>
+                          continue to uphold this tradition of Music for Bhakthi and Salvation and  <br/>
+                          teach our students that Music is divine and has to be learnt with Bhakthi and dedication.</i>
+                        </b>
+                      </p>
+                    </div>
                   </div>
                 </a>
               </div>
@@ -149,22 +165,37 @@
             <div class="carousel-item">
               <div>
                 <a href="OurTeam.html">
-                  <img src="images/Spread.jpg" style="opacity: 0.6;height: 800px;width:1200px;">
+                  <img src="images/Spread.jpg" style="height: 900px;width:1250px;">
                   <div class="centered">
-                    <br />
-                    <br />
-                    <br />
-                    &nbsp;
-                    <p style="font-family:'Alegreya';font-size:24pt;color:#FFFFFF;text-shadow: 3px 3px #010101" align="center">
+                      <div class="transbox" style="display: block;position: relative;height: 1100px;width:1250px;">
+                          <br/>
+                          <br/>
+                          <br/>
+                          <br/>
+                          <br/>
+                          <br/>
+                          <br/>
+                          <br/>
+                          <br/>
+                          <br/>
+                          <br/>
+                          <br/>
+                          <br/>
+                          <br/>
+                          <br/>
+                          <br/>
+                          &nbsp;
+                          &nbsp;
+                    <p style="font-family:'Alegreya';font-size:3vw;color:#FFFFFF;text-align: center;" >
                       <b>Spreading Our Wings
                     </p>
-                    <br />
-                    <p style="font-family:'Lato';color:#EF4442;font-size:16pt; text-shadow: 1px 1px #FFFFFF">
-                      <i>Sangeetha Bharathi started as an at home institute by Dr Padma Mallela almost 20 years back at
-                        Auckland, Newzealand. Over the years, it grew like a river with a prestige that students live
-                        music when they learn at Sangeetha Bharathi.</i>
+                    <p style="font-family:'Alegreya';color:#FFFFFF;font-size:2vw;text-align: center;">
+                      <i>Sangeetha Bharathi started as an at home institute by Dr Padma Mallela almost 20 years back 
+                          <br/>at Auckland, Newzealand. Over the years, it grew like a river with a prestige that 
+                          <br/>students live music when they learn at Sangeetha Bharathi.</i>
                       </b>
                     </p>
+                    </div>
                   </div>
                 </a>
               </div>
@@ -186,7 +217,7 @@
 
 
     <!-- FOOTER -->
-    <footer class="container">
+    <footer class="container-fluid">
       <p class="float-right"><a href="#">Back to top</a></p>
       <p>&copy; 2004-2020 Sangeetha Bharathi Music School, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
     </footer>
